## automake.am
##
## docs/automake.am for Loudwater
##
## (C) Copyright 2011 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.1 2011/12/15 14:15:26 pcvs Exp $
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = log_format.txt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4
