## automake.am
##
## htdocs/Makefile.am for Loudwater
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2009 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.10 2012/01/20 17:43:05 pcvs Exp $
##

install-exec-local:	
	mkdir -p @libexecdir@/loudwater
	cp admin.js @libexecdir@/loudwater/
	cp admin.pl @libexecdir@/loudwater/
	cp admin-doc.html @libexecdir@/loudwater/
	cp andotag.html @libexecdir@/loudwater/
	cp banner.js @libexecdir@/loudwater/
	cp banner.pl @libexecdir@/loudwater/
	cp common.pl @libexecdir@/loudwater/
	cp expressInstall.swf @libexecdir@/loudwater/
	cp facebook.js @libexecdir@/loudwater/
	cp feed.pl @libexecdir@/loudwater/
	cp greenball.png @libexecdir@/loudwater/
	cp hbanner.html @libexecdir@/loudwater/
	cp hplay.png @libexecdir@/loudwater/
	cp listvars.pl @libexecdir@/loudwater/
	cp makemap.html @libexecdir@/loudwater/
	cp makemap.pl @libexecdir@/loudwater/
	cp modieus.swf @libexecdir@/loudwater/
	cp play-base.png @libexecdir@/loudwater/
	cp player.css @libexecdir@/loudwater/
	cp player.html @libexecdir@/loudwater/
	cp player-sparse.html @libexecdir@/loudwater/
	cp player.js @libexecdir@/loudwater/
	cp player.pl @libexecdir@/loudwater/
	cp player.swf @libexecdir@/loudwater/
	cp progressbar.gif @libexecdir@/loudwater/
	cp redball.png @libexecdir@/loudwater/
	cp remap.pl @libexecdir@/loudwater/
	cp runspot.html @libexecdir@/loudwater/
	cp runspot.js @libexecdir@/loudwater/
	cp runspot.pl @libexecdir@/loudwater/
	cp social_test.png @libexecdir@/loudwater/
	cp swfobject.js @libexecdir@/loudwater/
	cp test_player_config.pl @libexecdir@/loudwater/
	cp test_player_head.txt @libexecdir@/loudwater/
	cp track.pl @libexecdir@/loudwater/
	cp utils.js @libexecdir@/loudwater/
	cp vbanner.html @libexecdir@/loudwater/
	cp version.pl @libexecdir@/loudwater/
	cp vplay.png @libexecdir@/loudwater/
	cp whiteball.png @libexecdir@/loudwater/

uninstall:	
	rm -f @libexecdir@/loudwater/admin.js
	rm -f @libexecdir@/loudwater/admin.pl
	rm -f @libexecdir@/loudwater/admin-doc.html
	rm -f @libexecdir@/loudwater/andotag.html
	rm -f @libexecdir@/loudwater/banner.js
	rm -f @libexecdir@/loudwater/banner.pl
	rm -f @libexecdir@/loudwater/common.pl
	rm -f @libexecdir@/loudwater/expressInstall.swf
	rm -f @libexecdir@/loudwater/facebook.js
	rm -f @libexecdir@/loudwater/feed.pl
	rm -f @libexecdir@/loudwater/greenball.png
	rm -f @libexecdir@/loudwater/hbanner.html
	rm -f @libexecdir@/loudwater/hplay.png
	rm -f @libexecdir@/loudwater/listvars.pl
	rm -f @libexecdir@/loudwater/makemap.html
	rm -f @libexecdir@/loudwater/makemap.pl
	rm -f @libexecdir@/loudwater/modieus.swf
	rm -f @libexecdir@/loudwater/play-base.png
	rm -f @libexecdir@/loudwater/player.css
	rm -f @libexecdir@/loudwater/player.html
	rm -f @libexecdir@/loudwater/player-sparse.html
	rm -f @libexecdir@/loudwater/player.js
	rm -f @libexecdir@/loudwater/player.pl
	rm -f @libexecdir@/loudwater/player.swf
	rm -f @libexecdir@/loudwater/progressbar.gif
	rm -f @libexecdir@/loudwater/redball.png
	rm -f @libexecdir@/loudwater/remap.pl
	rm -f @libexecdir@/loudwater/runspot.html
	rm -f @libexecdir@/loudwater/runspot.js
	rm -f @libexecdir@/loudwater/runspot.pl
	rm -f @libexecdir@/loudwater/social_test.png
	rm -f @libexecdir@/loudwater/swfobject.js
	rm -f @libexecdir@/loudwater/test_player_config.pl
	rm -f @libexecdir@/loudwater/test_player_head.txt
	rm -f @libexecdir@/loudwater/track.pl
	rm -f @libexecdir@/loudwater/utils.js
	rm -f @libexecdir@/loudwater/vbanner.html
	rm -f @libexecdir@/loudwater/version.pl
	rm -f @libexecdir@/loudwater/vplay.png
	rm -f @libexecdir@/loudwater/whiteball.png

EXTRA_DIST =  admin.js\
              admin.pl\
              admin-doc.html\
              andotag.html\
              banner.js\
              banner.pl\
              common.pl\
              expressInstall.swf\
              facebook.js\
              feed.pl\
              greenball.png\
              hbanner.html\
              hplay.png\
              listvars.pl\
              makemap.html\
              makemap.pl\
              modieus.swf\
              play-base.png\
              player.css\
              player.html\
              player-sparse.html\
              player.js\
              player.pl\
              player.swf\
              progressbar.gif\
              redball.png\
              remap.pl\
              runspot.html\
              runspot.js\
              runspot.pl\
              social_test.png\
              swfobject.js\
              test_player_config.pl\
              test_player_head.txt\
              track.pl\
              vbanner.html\
              version.pl.in\
              vplay.png\
              utils.js\
              whiteball.png

CLEANFILES = *~
DISTCLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
