## automake.am
##
## images/Makefile.am for Loudwater
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2012 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.3 2014/05/14 19:24:48 pcvs Exp $
##

install-exec-local:	
	mkdir -p $(DESTDIR)@libexecdir@/loudwater/images
	cp android-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp blackberry-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp chrome-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp firefox-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp ie-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp ipod-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp itunes-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp linux-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp opera-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp osx-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp question-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp safari-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp windows-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/
	cp yahoopipes-16x16.png $(DESTDIR)@libexecdir@/loudwater/images/

uninstall:
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/android-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/blackberry-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/chrome-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/firefox-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/ie-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/ipod-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/itunes-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/linux-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/opera-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/osx-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/question-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/safari-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/windows-16x16.png
	rm -f $(DESTDIR)@libexecdir@/loudwater/images/yahoopipes-16x16.png

EXTRA_DIST =  android-16x16.png\
              blackberry-16x16.png\
              chrome-16x16.png\
              firefox-16x16.png\
              ie-16x16.png\
              ipod-16x16.png\
              itunes-16x16.png\
              linux-16x16.png\
              opera-16x16.png\
              osx-16x16.png\
              question-16x16.png\
              safari-16x16.png\
              windows-16x16.png\
              yahoopipes-16x16.png

CLEANFILES = *~
DISTCLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
