## automake.am
##
## scripts/Makefile.am for Loudwater
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2009 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.2 2011/12/15 16:31:03 pcvs Exp $
##

#install-exec-local:	

#uninstall-exec:

sbin_SCRIPTS = loudwater_migrate_logs.pl\
               loudwater_update_db.pl


EXTRA_DIST = loudwater_migrate_logs.pl\
             loudwater_update_db.pl

CLEANFILES = *~
DISTCLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
