## automake.am
##
## stats/Makefile.am for Loudwater
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2011 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.2 2012/01/04 19:25:13 pcvs Exp $
##

#install-exec-local:	

#uninstall-exec:

bin_SCRIPTS = loudwater_stats_client_report.pl\
              loudwater_stats_common.pl\
              loudwater_stats_finish_reports.pl\
              loudwater_stats_start_reports.pl\
              loudwater_stats_update_db.pl

EXTRA_DIST = loudwater_stats_client_report.pl\
             loudwater_stats_common.pl\
             loudwater_stats_finish_reports.pl\
             loudwater_stats_start_reports.pl\
             loudwater_stats_update_db.pl\
             stattest.pl

CLEANFILES = *~
DISTCLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
